[package]
name = "containerd"
version = "0.1.0"
authors = ["Peter Salvatore <peter@psftw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0-alpha.5"
prost = "0.5"
prost-types = "0.5"
bytes = "0.4"
tokio = "0.2.0-alpha.6"

[build-dependencies]
tonic-build = "0.1.0-alpha.5"
